exports[`RouterContext should calc location 1`] = `
Object {
  "hash": "",
  "pathname": "/some-state",
  "search": "some=3",
}
`;

exports[`RouterContext should calc location 2`] = `
RouterContext {
  "_changeListeners": Array [],
  "_historyCleanupListener": [Function],
  "history": Object {
    "createHref": [Function],
    "listen": [Function],
    "location": Object {
      "hash": "",
      "pathname": "",
      "search": "",
    },
    "push": [Function],
    "replace": [Function],
  },
  "routes": Array [
    Route {
      "additionalParams": Array [
        "_hello",
      ],
      "availableParams": Array [
        "some",
        "_hello",
      ],
      "availableUrlParams": Array [
        "some",
      ],
      "name": "state",
      "params": Object {
        "_hello": 3,
      },
      "path": "/some-state",
      "pathMask": "/some-state",
      "pathMaskExp": /^\\/some-state$/,
      "pathMaskExpSrc": "/some-state",
      "pathMaskParams": Array [],
      "reroute": null,
      "searchParams": Array [
        "some",
      ],
      "slots": Object {},
      "url": "/some-state?some",
    },
  ],
  "routesByName": Object {
    "state": Route {
      "additionalParams": Array [
        "_hello",
      ],
      "availableParams": Array [
        "some",
        "_hello",
      ],
      "availableUrlParams": Array [
        "some",
      ],
      "name": "state",
      "params": Object {
        "_hello": 3,
      },
      "path": "/some-state",
      "pathMask": "/some-state",
      "pathMaskExp": /^\\/some-state$/,
      "pathMaskExpSrc": "/some-state",
      "pathMaskParams": Array [],
      "reroute": null,
      "searchParams": Array [
        "some",
      ],
      "slots": Object {},
      "url": "/some-state?some",
    },
  },
  "state": Object {
    "composition": Object {},
    "name": "some",
    "params": Object {
      "some": 4,
    },
  },
}
`;

exports[`RouterContext should destroy 1`] = `
RouterContext {
  "_changeListeners": Array [
    [Function],
  ],
  "history": Object {},
  "routes": Array [],
  "routesByName": Object {},
  "state": Object {
    "composition": Object {},
    "name": "some2",
    "params": Object {},
  },
}
`;

exports[`RouterContext should run every listener 1`] = `
RouterContext {
  "_changeListeners": Array [
    [Function],
    [Function],
  ],
  "history": Object {},
  "routes": Array [],
  "routesByName": Object {},
  "state": Object {
    "composition": Object {},
    "name": "some!",
    "params": Object {},
  },
}
`;
